# python-project-lvl1

./: .gitignore  Makefile  README.rst  pyproject.toml
brain_games/: cli.py  constants.py  even.py
brain_games/games/: __init__.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
gstr169_brain_games.egg-info/: PKG-INFO  SOURCES.txt
