[tool.poetry]
name = "gstr169_brain_games"
version = "0.1.1"
description = ""
authors = ["d.finko <dmit.finn@yandex.ru>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8.5"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
flake8-broken-line = "^0.2.1"
flake8-bugbear = "^20.1.4"
flake8-builtins = "^1.5.3"
flake8-commas = "^2.0.0"
flake8-comprehensions = "^3.2.3"
flake8-eradicate = "^0.4.0"
flake8-quotes = "^3.2.0"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
