[tool.poetry]
name = "gstr169_brain_games"
version = "1.1.0"
description = "Project with a many brain games."
authors = ["d.finko <dmit.finn@yandex.ru>"]
packages = [
  { include = "brain_games" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console"
]
repository = "https://github.com/gstr169/python-project-lvl1"

[tool.poetry.dependencies]
python = "^3.8.5"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
